--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.2)
 project(allocator VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+find_package(Boost COMPONENTS log REQUIRED)
 
 add_executable(allocator main.cpp)
 
@@ -12,8 +13,12 @@ set_target_properties(allocator PROPERTIES
   CXX_STANDARD 14
   CXX_STANDARD_REQUIRED ON
   COMPILE_OPTIONS -Wpedantic -Wall -Wextra
+  COMPILE_DEFINITIONS BOOST_LOG_DYN_LINK
 )
 
+target_link_libraries(allocator
+  ${Boost_LIBRARIES}
+)
 
 #add_executable(test_main_cli test_main.cpp)
 
