--- a/version.h.in
+++ b/version.h.in
@@ -1,4 +1,4 @@
-#pragma ones
+#pragma once
 
 #define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
 #define PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
